compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__duplicate_vars_3.snap
---
source: compiler-core/src/type_/tests/errors.rs
assertion_line: 690
expression: "case [1, 2, 3] { [x, x, y] -> 1 }"

---
error: Duplicate variable in pattern
  ┌─ /src/one/two.gleam:1:22
  │
1 │ case [1, 2, 3] { [x, x, y] -> 1 }
  │                      ^ This has already been used

Variables can only be used once per pattern. This variable x appears
multiple times.
If you used the same variable twice deliberately in order to check for
equality please use a guard clause instead.
e.g. (x, y) if x == y -> ...

